--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 <head><h1> MY WEB PAGE </head>
-<body bgcolor="blue">
-<table>
-<tr><td>one</td><td>two</td></tr>
-<tr><td>three</td><td>four</td></tr>
-<tr><td>five</td><td>six</td></tr>
-</table>
+<body bgcolor="white">
+<center><h1>TEXT LINKS</h1></center><hr>
+##<a herf="google.com/" target="blank">Google</a>##
+<hr>
+<center><h1>TEXT LINKS</h1></center><hr>
+##<a herf="www.youtube.com/" target="blank">youtube</a>##
+<hr>
 </body>
 </html>
+
 
